# cosmo_message_stack

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  CMakePresets.json  README.md  cosmo.code-workspace  gcovr.cfg  project.yml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
cmake/: CMakeLists.txt  ceedling.cmake  clangformat.cmake  gcov.cmake  unity.cmake
scripts/: ci.sh
source/: CMakeLists.txt
source/application/: CMakeLists.txt
source/application/public_inc/: cosmo_application.h  cosmo_application_config.h
source/application/source/: cosmo_application.c
source/application/test/: test_cosmo_application.c
source/network/: CMakeLists.txt
source/network/public_inc/: cosmo_network.h  cosmo_network_config.h
source/network/source/: cosmo_network.c  cosmo_network_send.c
source/network/test/: test_cosmo_network.c
source/utils/: CMakeLists.txt
source/utils/public_inc/: cosmo_alloc.h  cosmo_message_status.h  cosmo_message_types.h
source/utils/source/: cosmo_alloc.c
test/: CMakeLists.txt
test/support/: ceedling.cmake  clangformat.cmake  clangtidy.cmake  cmock.yml  sanitizer.cmake  unity.cmake
